# balance_continuous

./: .gitattributes  .gitignore  SandP500Ticker.csv  main.py  pyproject.toml
artifacts/data_ingestion/: price_data.parquet
artifacts/data_tranformation/: IT_price_data.parquet  financial_price_data.parquet
config/: config.yaml  params.yaml
data/: tau_AAPL_all.parquet  tau_AAPL_all.pkl  tau_estimates.parquet
data/output_tau_financial/: tau_ACGL_all.parquet  tau_AFL_all.parquet  tau_AIG_all.parquet  tau_AJG_all.parquet  tau_ALL_all.parquet  tau_AON_all.parquet  tau_AXP_all.parquet  tau_BAC_all.parquet  tau_BEN_all.parquet  tau_BK_all.parquet  tau_BLK_all.parquet  tau_BRO_all.parquet  tau_CB_all.parquet  tau_CINF_all.parquet  tau_COF_all.parquet  tau_C_all.parquet  tau_EG_all.parquet  tau_ERIE_all.parquet  tau_FDS_all.parquet  tau_FITB_all.parquet  tau_FI_all.parquet  tau_GL_all.parquet  tau_GS_all.parquet  tau_HBAN_all.parquet  tau_HIG_all.parquet  tau_IVZ_all.parquet  tau_JKHY_all.parquet  tau_JPM_all.parquet  tau_KEY_all.parquet  tau_L_all.parquet  tau_MCO_all.parquet  tau_MMC_all.parquet  tau_MS_all.parquet  tau_MTB_all.parquet  tau_NTRS_all.parquet  tau_PGR_all.parquet  tau_PNC_all.parquet  tau_RF_all.parquet  tau_RJF_all.parquet  tau_SCHW_all.parquet  (+8 more)
data/output_tau_numba/: tau_AAPL_all.parquet  tau_ACGL_all.parquet  tau_ADBE_all.parquet  tau_ADSK_all.parquet  tau_AFL_all.parquet  tau_AIG_all.parquet  tau_AJG_all.parquet  tau_AKAM_all.parquet  (+82 more)
research/: 01_data_ingestion.ipynb  02_data_transformation.ipynb  kendall_tau_server.py  sp500_by_sector.json
(+4 files in other folders)
