[project]
name = "balance-continuous"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "box>=0.1.5",
    "ensure>=1.0.4",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "logging>=0.4.9.6",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.0",
    "yfinance>=0.2.66",
]
